# pen_plotter_robot

./: .gitignore  README.md  storey.md  story.md
firmware/libraries/MKS_SERVO42/src/: MKS_SERVO42.cpp  MKS_SERVO42.h
firmware/main/: main.ino
media/: mks_servo_42c.avif
python/notebooks/: test.ipynb  test.py
python/robot_pen_plotter/: pyproject.toml
python/robot_pen_plotter/plotter/: __init__.py
python/robot_pen_plotter/scripts/: hand_detection.py
