[tool.poetry]

name = "robot-pen-plotter"
version = "0.1.0"
description = ""
authors = ["Robertleoj <robert.leo.jonsson@gmail.com>"]
readme = "README.md"
packages = [
    { include = "plotter" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
sympy = "^1.13.3"
matplotlib = "^3.9.2"
ikpy = "^3.4.2"
ipympl = "^0.9.4"
pyserial = "^3.5"
esptool = "^4.8.1"
tqdm = "^4.67.1"
mediapipe = "^0.10.18"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
jupytext = "^1.16.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable the rules for flake8, pylint, and some extras
select = ["E", "F", "W", "D", "I"]
ignore = ["D100", "D104", "D413"]
line-length = 120

# Define excludes if there's stuff you want ruff to skip
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "**/*.ipynb"
]

[tool.ruff.isort]
combine-as-imports = true
force-single-line = true


[tool.pyright]
typeCheckingMode = "basic"  # or "basic" or "off", depending on your vibe
